# VideoPlayer

./: CMakeLists.txt  CustomIconButton.qml  KeypadDelegate.qml  Main.qml  PINPad.qml  VideoViewer.qml  applicationinitializer.cpp  applicationinitializer.h  main.cpp  passwordfilereader.cpp  passwordfilereader.h  passwordmanager.cpp  passwordmanager.h  resources.qrc
